--- a/service/user/api/etc/user.yaml
+++ b/service/user/api/etc/user.yaml
@@ -1,6 +1,24 @@
 Name: User
 Host: 0.0.0.0
-Port: 8888
+Port: 8000
 
-Salt: HWVOFkGgPTryzICwd7qnJaZR9KQ2i8xe
+Mysql:
+  DataSource: root:123456@tcp(127.0.0.1:3306)/mall?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
+
+CacheRedis:
+- Host: 127.0.0.1:6379
+  Pass:
+  Type: node
+
+Auth:
+  AccessSecret: uOvKLmVfztaXGpNYd4Z0I1SiT7MweJhl
+  AccessExpire: 86400
+
+# rpc 服务配置
+UserRpc:
+  Etcd:
+    Hosts:
+    - 17.0.0.1:2379
+    Key: user.rpc
+
 
