--- a/service/user/rpc/etc/user.yaml
+++ b/service/user/rpc/etc/user.yaml
@@ -7,7 +7,7 @@ Etcd:
   Key: user.rpc
 
 Mysql:
-  DataSource: root:123456@tcp(127.0.0.1:3306)/mall?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
+  DataSource: root:12345678@tcp(127.0.0.1:3306)/mall?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
 
 CacheRedis:
 - Host: 127.0.0.1:6379
